--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<build>
